--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.29.0
-pandas==2.0.3
-numpy==1.25.2
-scikit-learn==1.3.2
-joblib==1.3.2
-matplotlib==3.7.2
-seaborn==0.12.3
-plotly==5.15.0
+pandas>=1.5
+numpy>=1.23
+matplotlib>=3.6
+seaborn>=0.12
+scikit-learn>=1.2
+streamlit>=1.25
+joblib>=1.2
